<resources>
    <string name="app_name">Poneglyph</string>
    <string name="continue_without_login">Continue without login</string>
    <string name="no_account_signup">No account? <b>SignUp!</b></string>
    <string name="login">Login</string>
    <string name="welcome_to_poneglyph">Welcome to Poneglyph</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="name">Name</string>
    <string name="your_account">Your account</string>
    <string name="abc_example_com">abc@example.com</string>
    <string name="user_account">User Account</string>
    <string name="admin_account">Admin Account</string>
    <string name="add_category">+ Add Category</string>
    <string name="add_new_category">Add new Category</string>
    <string name="category_title">Category Title</string>
    <string name="submit">Submit</string>
    <string name="search">Search</string>
    <string name="category_title_dashboard">Category Title</string>
    <string name="add_new_article">Add new Article</string>
    <string name="upload">Upload</string>
    <string name="article_category">Article Category</string>
    <string name="article_description">Article Description</string>
    <string name="article_title">Article Title</string>
    <string name="articles">Articles</string>
    <string name="category">Category</string>
    <string name="update">Update</string>
    <string name="new_article_title">New Article Title</string>
    <string name="edit_article_info">Edit Article Info</string>
    <string name="new_article_description">New Article Description</string>
    <string name="article_details">Article Details</string>
    <string name="read_article">Read Article</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>