<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4285F4"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iconIv"
        android:layout_width="261dp"
        android:layout_height="99dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iconIv"
        android:text="@string/welcome_to_poneglyph"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textColor="@color/white"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/skipBtn"
        android:layout_marginBottom="23dp"
        android:background="@drawable/wh_square"
        android:text="@string/login"
        android:textColor="@color/blue1"
        android:textAllCaps="false" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/skipBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="267dp"
        android:background="@drawable/wh_square"
        android:textColor="@color/blue1"
        android:text="@string/continue_without_login"
        android:textAllCaps="false"/>


</RelativeLayout>