<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PdfEditActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/shape_toolbar01">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="5dp"
            android:src="@drawable/ic_back"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/iconIv"
            android:layout_width="250dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iconIv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/edit_article_info"
            android:textColor="@color/white"
            android:textSize="28sp"/>

    </RelativeLayout>

    <ScrollView
        android:layout_marginTop="225dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titleTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/titleEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_add_pdf_gray"
                    android:drawablePadding="10dp"
                    android:hint="@string/new_article_title"
                    android:inputType="textPersonName|textCapWords"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray2"
                    android:textSize="16sp"
                    tools:ignore="TouchTargetSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_below="@id/titleTil"
                android:layout_marginTop="10dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/descriptionEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_description"
                    android:drawablePadding="10dp"
                    android:gravity="top"
                    android:hint="@string/new_article_description"
                    android:inputType="textMultiLine|textCapSentences"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray2"
                    android:textSize="16sp"
                    tools:ignore="TouchTargetSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/categoryTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/descriptionTil"
                android:layout_marginStart="35dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/shape_edittext01"
                android:drawablePadding="12dp"
                android:gravity="center_vertical"
                android:hint="@string/article_category"
                android:padding="10dp"
                android:textColorHint="@color/gray2"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_category_white"
                app:drawableEndCompat="@drawable/ic_down_gray" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submitBtn"
                android:layout_below="@id/categoryTv"
                style="@style/AppTheme.ButtonStyle"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:text="@string/update"/>

        </RelativeLayout>


    </ScrollView>



</RelativeLayout>