<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PdfListAdminActivity">

    <RelativeLayout
        android:id="@+id/toolbarRL"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/shape_toolbar02">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="5dp"
            android:src="@drawable/ic_back"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/titleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/articles"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="8dp"/>
        <TextView
            android:id="@+id/subtitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:layout_below="@id/titleTv"/>

    </RelativeLayout>

<!--    <EditText-->
<!--        android:id="@+id/searchEt"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/toolbarRL"-->
<!--        android:layout_marginStart="10dp"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:layout_marginEnd="10dp"-->
<!--        android:background="@drawable/search_view_border"-->
<!--        android:drawableStart="@drawable/ic_search_gray"-->
<!--        android:hint="@string/search"-->
<!--        android:textSize="16sp"-->
<!--        android:textColor="@color/gray1"-->
<!--        android:minHeight="48dp"-->
<!--        android:padding="10dp" />-->

    <SearchView
        android:id="@+id/searchEt"
        android:layout_below="@id/toolbarRL"
        android:iconifiedByDefault="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/search_view_border"
        android:queryHint="@string/search"
        android:textSize="16sp"
        android:minHeight="48dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bookRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/searchEt"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/row_pdf_admin" />

</RelativeLayout>